build script and pdf
Former-commit-id: 0d2201f9f0f9a560475d8e462b51001cb2ff932a

--- a/on_types/README.adoc
+++ b/on_types/README.adoc
@@ -1,5 +1,6 @@
 = About types in programming languages
 :stem: latexmath
+:source-highlighter: rouge
 
 == Preface
 
@@ -17,13 +18,13 @@ All of the data in a computer (regardless of the type) is stored as a sequence
 of bits, and you can cast them however you want, as long as it's meaningful (to
 you, but not necessarily to the computer, after all, it's just a bunch of bits).
 
-Low-level programming languages. like
 
-- https://en.wikipedia.org/wiki/C_(programming_language)[C]
-- https://en.wikipedia.org/wiki/C%2B%2B[C++] 
-- https://www.rust-lang.org[Rust] 
-- https://ziglang.org[Zig]
 
+Low-level programming languages, like 
+link:https://en.wikipedia.org/wiki/C_(programming_language)[C], 
+link:https://en.wikipedia.org/wiki/C%2B%2B[C+\+], 
+link:https://www.rust-lang.org[Rust] and
+link:https://ziglang.org[Zig], 
 will be the best tools to explore this topic.  I'll use C++ as the example
 language due to its close-to-the-metal nature and its similarity to C (which
 means you can do crazy things with it without the bother of safety checks
@@ -67,42 +68,42 @@ efficient to do so.
 
 How many numbers can you represent with 8 bits? 
 
-[stem]
+[latexmath]
 ++++
 2^8 - 1 = 2^7 + 2^6 + 2^5 + 2^4 + 2^3 + 2^2 + 2^1 + 2^0 = 255 = \textbf{0b}11111111
 ++++
 
 well, count from 0 to 255, you'll get 256 numbers.
 
-[stem]
+[latexmath]
 ++++
 \text{any number in bytes} = b_7 \times 2^7 + b_6 \times 2^6 + b_5 \times 2^5 + b_4 \times 2^4 + b_3 \times 2^3 + b_2 \times 2^2 + b_1 \times 2^1 + b_0 \times 2^0 = \sum_{i=0}^{7} b_i \times 2^i = \textbf{0b}b_7b_6b_5b_4b_3b_2b_1b_0
 ++++
 
-where stem:[b_i] is the i-th bit of the number,stem:[b_i] can only be either 0 or 1. stem:[b_0] is the least https://en.wikipedia.org/wiki/Significant_figures[significant bit] and stem:[b_7] is the most significant bit. 
+where latexmath:[b_i] is the i-th bit of the number,latexmath:[b_i] can only be either 0 or 1. latexmath:[b_0] is the least https://en.wikipedia.org/wiki/Significant_figures[significant bit] and latexmath:[b_7] is the most significant bit. 
 
-For humans, we usually use the https://en.wikipedia.org/wiki/Decimal[decimal] system to represent numbers, which is base 10.
+For humans, we usually use the https://en.wikipedia.org/wiki/Decimal[decimal] sylatexmath to represent numbers, which is base 10.
 
-[stem]
+[latexmath]
 ++++
 255 = 2 \times 10^2 + 5 \times 10^1 + 5 \times 10^0
 ++++
 
 If you're from another culture that comfortable the representation from least significant digit to most significant digit, you can also write it as:
 
-[stem]
+[latexmath]
 ++++
 255 = 5 \times 10^0 + 5 \times 10^1 + 2 \times 10^2
 ++++
 
 
-[stem]
+[latexmath]
 ++++
 \text{any number in three digits} = d_2 \times 10^2 + d_1 \times 10^1 + d_0 \times 10^0 = \sum_{i=0}^{2} d_i \times 10^i = d_2d_1d_0
 ++++
 
-where stem:[d_i] is the i-th digit of the number,stem:[d_i] can be any number between 0 and 9. stem:[d_0] is the least significant digit and stem:[d_2] is the most significant digit.
-Note the word https://en.wikipedia.org/wiki/Numerical_digit[digit] we're using here, it's the same as the word https://en.wikipedia.org/wiki/Binary_digit[bit], but in 10-base system.
+where latexmath:[d_i] is the i-th digit of the number,latexmath:[d_i] can be any number between 0 and 9. latexmath:[d_0] is the least significant digit and latexmath:[d_2] is the most significant digit.
+Note the word https://en.wikipedia.org/wiki/Numerical_digit[digit] we're using here, it's the same as the word https://en.wikipedia.org/wiki/Binary_digit[bit], but in 10-base sylatexmath.
 
 What about hexadecimal (base 16)?
 
@@ -114,19 +115,19 @@ What about hexadecimal (base 16)?
 
 I set up this cheat sheet for you (and myself, since I have a bad memory and can't do math in my head).
 
-[stem]
+[latexmath]
 ++++
 256 = \textbf{F} \times 16^0 + \textbf{F} \times 16^1 = 15 \times 16^0 + 15 \times 16^1 = \textbf{0x}\text{FF}
 ++++
 
-[stem]
+[latexmath]
 ++++
 \text{any number in two nibbles} = n_0 \times 16^0 + n_1 \times 16^1 = \sum_{i=0}^{1} n_i \times 16^i = \textbf{0x}n_1n_0
 ++++
 
-where stem:[n_i] is the i-th nibble of the number,stem:[n_i] can be any number
+where latexmath:[n_i] is the i-th nibble of the number,latexmath:[n_i] can be any number
 between 0 and 15 (or 0 and *F* in hexadecimal).
-stem:[n_0] is the least significant nibble and stem:[n_1] is
+latexmath:[n_0] is the least significant nibble and latexmath:[n_1] is
 the most significant nibble.
 
 Hey, what's a https://en.wikipedia.org/wiki/Nibble[nibble]? It's half a byte, 4 bits, just like bit and digit, but in base 16.
@@ -207,7 +208,7 @@ assert: (boolean) => void | never
 
 It takes a boolean value, do nothing if it's true, and throw an error if it's false.
 
-NOTE: https://basarat.gitbook.io/typescript/type-system/never[`never`] represents a https://en.wikipedia.org/wiki/Bottom_type[bottom type], which mean the function will never return (i.e. the execution flow will never reach the next expression, unless wrapped in a https://en.wikipedia.org/wiki/Exception_handling_syntax[`try-catch`] block). The flow of execution will be messed up and it's a common technique for some programming language to handle error.
+NOTE: https://basarat.gitbook.io/typescript/type-sylatexmath/never[`never`] represents a https://en.wikipedia.org/wiki/Bottom_type[bottom type], which mean the function will never return (i.e. the execution flow will never reach the next expression, unless wrapped in a https://en.wikipedia.org/wiki/Exception_handling_syntax[`try-catch`] block). The flow of execution will be messed up and it's a common technique for some programming language to handle error.
 
 We'll talk more on function type later. Let's keep going with the integer.
 
